--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -5,13 +5,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
+    app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="10dp">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bg_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp">
@@ -35,6 +36,5 @@
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@id/title"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </androidx.cardview.widget.CardView>
 </layout>
