--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#42a5f5</color>
-    <color name="colorPrimaryLight">#80d6ff</color>
+    <color name="colorPrimaryLight">#B3E7FF</color>
     <color name="colorPrimaryDark">#0077c2</color>
     <color name="colorAccent">#03DAC5</color>
 
