--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -14,8 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:title="@string/app_name"
-            app:titleTextColor="@android:color/white"
             app:menu="@menu/main_menu"
+            app:titleTextColor="@android:color/white"
             app:layout_scrollFlags="scroll|enterAlways|snap">
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/addNote"
+        android:id="@+id/addOrSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:icon="@drawable/ic_add"
@@ -33,5 +33,15 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="25dp"
         android:layout_marginEnd="25dp"/>
+<!--    <FrameLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@android:color/black">-->
+<!--        <ImageView-->
+<!--            android:id="@+id/temp_img"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:src="@drawable/ic_profile"/>-->
+<!--    </FrameLayout>-->
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
