--- a/app/src/main/res/layout/note_list_fragment.xml
+++ b/app/src/main/res/layout/note_list_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tool="http://schemas.android.com/tools"
@@ -17,6 +17,5 @@
             tool:itemCount="10"
             tool:listitem="@layout/note_list_item"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
