--- a/app/src/main/res/layout/signin_activity.xml
+++ b/app/src/main/res/layout/signin_activity.xml
@@ -16,6 +16,7 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:src="@drawable/ic_google"
+        android:contentDescription="@string/Google"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_big_add"
+        android:contentDescription="@string/img"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/googleIcon"
@@ -34,6 +36,7 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:src="@drawable/ic_notepad"
+        android:contentDescription="@string/app_name"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/plusIcon"
