--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="bgLight">#E1E1E1</color>
+    <color name="danger">#C54E4E</color>
 </resources>
