--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,9 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
+    <style name="DialogBtn_TextAppearance">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 </resources>
